refactor: 메세지 enum분리, 띄어쓰기 및 미사용 메서드 삭제